[gd_scene load_steps=14 format=2]

[ext_resource path="res://Graphics/Fonts/MainFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Graphics/HUD/Buttons/ButtonNormal.png" type="Texture" id=2]
[ext_resource path="res://Graphics/HUD/ProgressBars/HealthBar_Progress.png" type="Texture" id=3]
[ext_resource path="res://Graphics/HUD/ProgressBars/HealthBar_Outline.png" type="Texture" id=4]
[ext_resource path="res://Graphics/HUD/Buttons/ButtonPressed.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Player/MainCharacterFace.png" type="Texture" id=6]
[ext_resource path="res://Graphics/HUD/Buttons/ButtonHover.png" type="Texture" id=7]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=8]
[ext_resource path="res://Audio/SFX/MenuNegative.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/SFX/MenuPositive.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/SFX/MenuNavigationSound.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=3]
size = 55
outline_size = 3
outline_color = Color( 0.109804, 0.109804, 0.109804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 3
outline_color = Color( 0.215686, 0.215686, 0.215686, 1 )
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.77545
margin_right = 1.77539
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
normal_button_tex = ExtResource( 2 )
hover_button_tex = ExtResource( 7 )
pressed_button_tex = ExtResource( 5 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HealthBar" type="TextureProgress" parent="HUD/Health"]
margin_left = 1.1485
margin_top = 4.61155
margin_right = 140.148
margin_bottom = 26.6115
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 0.278431, 0.278431, 1 )

[node name="HealthTween" type="Tween" parent="HUD/Health"]

[node name="Stamina" type="Control" parent="HUD"]
margin_left = 0.429283
margin_top = 16.0979
margin_right = 40.4293
margin_bottom = 56.0979
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaBar" type="TextureProgress" parent="HUD/Stamina"]
margin_top = 13.0
margin_right = 139.0
margin_bottom = 27.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.615686, 1, 0.223529, 1 )

[node name="StaminaTween" type="Tween" parent="HUD/Stamina"]

[node name="Gold" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="HUD/Gold"]
margin_left = 981.0
margin_top = 4.0
margin_right = 1021.0
margin_bottom = 18.0
text = "0"

[node name="GoldSprite" type="Sprite" parent="HUD/Gold"]
position = Vector2( 959, 7 )

[node name="PauseMenu" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="PauseMenu"]
modulate = Color( 1, 0.870588, 0.592157, 1 )
margin_left = 31.0165
margin_top = 328.258
margin_right = 287.017
margin_bottom = 456.258
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="PauseMenu"]
modulate = Color( 1, 0.870588, 0.592157, 1 )
margin_left = 31.0165
margin_top = 454.909
margin_right = 287.017
margin_bottom = 582.909
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="PauseMenu"]
margin_left = 389.993
margin_top = 19.7967
margin_right = 594.993
margin_bottom = 86.7967
custom_fonts/font = SubResource( 3 )
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeLabel" type="Label" parent="PauseMenu"]
margin_left = 74.5485
margin_top = 364.444
margin_right = 241.549
margin_bottom = 416.444
custom_fonts/font = SubResource( 2 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitLabel" type="Label" parent="PauseMenu"]
margin_left = 70.6034
margin_top = 493.816
margin_right = 237.603
margin_bottom = 545.816
custom_fonts/font = SubResource( 2 )
text = "QUIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitSprite" type="Sprite" parent="PauseMenu"]
position = Vector2( 1309.7, 601.258 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="PositiveMenuSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="NegativeMenuSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="MenuNavigationSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
[connection signal="mouse_entered" from="PauseMenu/ResumeButton" to="." method="update_pause_option" binds= [ 0 ]]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="select_pause_option"]
[connection signal="mouse_entered" from="PauseMenu/QuitButton" to="." method="update_pause_option" binds= [ 1 ]]
[connection signal="pressed" from="PauseMenu/QuitButton" to="." method="select_pause_option"]
